[project]
name = "langgraph-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "cryptography>=45.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "greenlet>=3.2.4",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
